# brower-user

./: .env.example  README.md  pyproject.toml
.github/copilot/: prompts.md
src/: __init__.py  demo.py  ticket_bot.py
