[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-ticket-bot"
version = "0.1.0"
description = "B站自动购票工具"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "bilibili-api-python>=17.1.4",
    "mcp[cli]>=1.4.1",
    "requests>=2.32.3",
    "browser-use>=0.0.5",
    "selenium>=4.15.2",
    "webdriver-manager>=4.0.1",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
ticket-bot = "bilibili_ticket_bot.demo:main"
